tests/diagnostics/catalog/snapshots/ir/IR0031.snap
error[IR0031]: IR_E_INVALID_DECLARATION
 --> tests/diagnostics/catalog/sources/ir/IR0031.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0031
  = help: keep IR validation diagnostics structured and catalog-backed
